Uploaded image for project: 'Qpid Proton'
  1. Qpid Proton
  2. PROTON-1281

Odd link error when optimisation level is -O2 or -O3 when compiling with libc++ (clang C++ library)

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • proton-0.12.0
    • proton-0.14.0
    • cpp-binding
    • None
    • FreeBSD 10

    Description

      Building in the RelWithDebInfo or Release configurations on FreeBSD fails to build executables that use the C++ binding with a link error which is effectively this demangled symbol not found:

      std::ostream& operator<<(std::ostream&, std::string)

      [But it's much longer in real life because it's massively templated]

      Attachments

        Activity

          People

            astitcher Andrew Stitcher
            astitcher Andrew Stitcher
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: