PROTON-1281: [C++ Binding] Missed #include <ostream> - This was causing a difficult to find link error on FreeBSD/clang++

The code in question was using ostream& << std::string("whatever");
  but only including <string> which only declares the operator<< used.

  However you need <ostream> to define the necessary template instantiation.
  If you don't include <ostream> then it becomes an unknown symbol.

  This only happens when compiling with -O2 or -O3. I think this is
  because these options inline the template instantiation in other
  places so that the symbol is not available in the library anymore.