proton-c/bindings/cpp/src/error_condition.cpp
@@ -19,9 +19,12 @@
  *
  */
 #include "proton/error_condition.hpp"
+
 #include <proton/condition.h>
 
 #include "proton_bits.hpp"
+
+#include <ostream>
 
 namespace proton {
 
